--- a/pages/features.css
+++ b/pages/features.css
@@ -1,10 +1,67 @@
 body {
-    text-align: center;
-    justify-content: center;
-    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .ft-h1 {
     margin-top: 3rem;
+    text-align: center;
+}
+
+.small-text {
+    font-size: 10px;
+    font-style: italic;
+}
+
+.lists {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 6rem;
+}
+
+.skill-div {
+    border: 1px solid black;
+    width: 270px;
+    margin-right: 10rem;
+    font-size: 20px;
+}
+
+.interest-div {
+    border: 1px solid black;
+    width: 270px;
+    font-size: 20px;
+}
+
+.knowledge-div {
+    border: 1px solid black;
+    width: 270px;
+    margin-left: 10rem;
+    font-size: 20px;
+}
+
+p {
+    text-align: center;
+    font-weight: bolder;
+}
+
+.go-back-btn {
+    margin-top: 5rem;
+    margin-left: 4rem;
+    height: 50px;
+    width: 80px;
+    border: none;
+    border-radius: 20px;
+    background-color: bisque;
+}
+
+.go-back-btn:hover {
+    width: 150px;
+}
+
+.back-btn {
+    text-decoration: none;
+    font-size: 20px;
+    /*content: "fuck go back";
+    when hovered, button extends and shows text
+    */
 }
