--- a/pages/home.css
+++ b/pages/home.css
@@ -1,18 +1,33 @@
 .home-body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    justify-content: center;
-    align-items: center;
     background-color: beige;
 }
 
+.header {
+    position: fixed;
+    margin-top: 0;
+    /*border: 1px solid black;*/
+    width: 100%;
+    height: auto;
+    background-color: beige;
+    z-index: 2;
+}
+
 .home-h1 {
-    margin-top: 2rem;
     font-size: 50px;
 }
 
 .home-p {
     font-style: italic;
+}
+
+.home-div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 12rem;
+    /*border: 1px solid black;*/
 }
 
 .profile-btn {
@@ -21,7 +36,7 @@
     height: 50px;
     padding-top: 15px;
     opacity: 30%;
-    transition: 0.5s;
+    transition: 0.4s;
 }
 
 .profile-btn:hover {
@@ -37,7 +52,7 @@
     height: 50px;
     padding-top: 15px;
     opacity: 30%;
-    transition: 0.5s;
+    transition: 0.4s;
 }
 
 .features-btn:hover {
@@ -45,13 +60,6 @@
     background-color: lightgray;
     border-radius: 22px;
     opacity: 100%;
-}
-
-.home-div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 12rem;
 }
 
 .div-btn {
@@ -70,3 +78,71 @@
     border: none;
 }
 
+/* SECOND PART / SECOND DIV */
+.second-div {
+    margin-top: 12rem;
+    max-height: auto;
+    border-radius: 20px;
+    background-color: white;
+    padding-bottom: 5rem;
+}
+
+.second-div h1 {
+    padding-top: 2.5rem;
+    font-style: italic;
+}
+
+.contacts {
+    /*border: 1px solid black;*/
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 3.5rem;
+}
+
+.contacts a {
+    text-decoration: none;
+    color: black;
+}
+
+.contacts a:hover {
+    color: white;
+}
+
+.div-facebook {
+    /*border: 1px solid black;*/
+    width: 3in;
+    margin-right: 10rem;
+    background-color: lightblue;
+    border-radius: 20px;
+}
+
+.div-github {
+    /*border: 1px solid black;*/
+    width: 3in;
+    background-color: lightgray;
+    border-radius: 20px;
+}
+
+.div-twitter {
+    /*border: 1px solid black;*/
+    width: 3in;
+    margin-left: 10rem;
+    background-color: lightskyblue;
+    border-radius: 20px;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: gray; 
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px lightgrey; 
+    border-radius: 10px;
+}
