--- a/pages/profile.css
+++ b/pages/profile.css
@@ -45,6 +45,7 @@
     height: auto; /* auto para matic adjust */
     max-width: 100%;
     border-radius: 20px;
+    border: 4px solid black;
 }
 
 .text-div {
@@ -58,6 +59,7 @@
     margin-bottom: 2.5rem;
     background-color: beige;
     border-radius: 20px;
+    border: 2px solid black;
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
@@ -77,7 +79,7 @@
     margin-right: 11.5in;
     height: 50px;
     width: 80px;
-    border: none;
+    border: 2px solid black;
     border-radius: 20px;
     background-color: bisque;
     transition: 0.5s;
